--- a/ui/styles.css
+++ b/ui/styles.css
@@ -1,42 +1,62 @@
+search {
+    position: absolute;
+    text-align: center;
+    font-size: 50px;
+    font-family: monospace, 'Arial Narrow Bold', sans-serif;
+    color: white;
+    width: 415px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+
+    
+
+    display:flex;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
 
 
-
-container{
-    padding-left: 2%;
-    background: rgba(76, 76, 76, 0.3);
+    background: rgba(76, 76, 76, 0.5);
     border-radius: 10px;
     border-color: grey;
     border-style:solid;
     border-width: 1;
 }
 
-search {
-
-
-    position: absolute;
-    font-size: 50px;
-    font-family: monospace, 'Arial Narrow Bold', sans-serif;
-    color: white;
-    width: 420px;
-    
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+searchOptions{
+    display: inherit;
+    flex-direction: row;
 }
 
+#MainTitle{
+    right:2%;
+}
 
 #Author {
     position: relative;
+    right: 2%
 }
 
 #SearchBox{
     position: absolute;
-    right: 6%;
+    right: 4%;
     background: rgba(255, 255, 255, 0.4);
     color: black;
+
+
+    border-width: 2px;
+    border-radius: 10px;
 } ::placeholder {
     color:black
 }
 
+
+#Selectable{
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 10px;
+    border-color: grey;
+    border-style:solid;
+    border-width: 1;
+}
