--- a/ui/styles.css
+++ b/ui/styles.css
@@ -53,7 +53,7 @@ searchOptions{
 }
 
 
-#Selectable{
+.Selectable{
     background: rgba(255, 255, 255, 0.6);
     border-radius: 10px;
     border-color: grey;
